--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-project-gateway",
   "version": "1.0.0",
-  "description": "",
+  "description": "My doc-app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
